--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wicked-sales-js-solution",
+  "name": "enthusiasm",
   "version": "1.0.0",
   "description": "Reference implemenation of a Node.js &amp; React shopping cart app.",
   "main": "server/index.js",
